# CppTemplate

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
script/: build.bat
